--- a/MeditationDemo/Context/Main/Controller/MainVC.xib
+++ b/MeditationDemo/Context/Main/Controller/MainVC.xib
@@ -5,13 +5,15 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainVC" customModule="MeditationDemo" customModuleProvider="target">
             <connections>
-                <outlet property="collectionView" destination="Zo6-HC-l4z" id="TPQ-Ur-wpB"/>
+                <outlet property="bannerContainerView" destination="Sq4-Vb-JwT" id="kMe-I2-a9M"/>
+                <outlet property="bannerView" destination="6pw-Gx-pZp" id="vJA-gM-JhZ"/>
+                <outlet property="meditationsCollectionView" destination="FRV-5q-6dN" id="RaS-an-2vX"/>
+                <outlet property="storyCollectionView" destination="Qyh-cH-ptr" id="LCv-ok-sgd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,31 +22,88 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Zo6-HC-l4z">
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="NEd-ez-3ZF">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MeV-PG-osW">
-                        <size key="itemSize" width="128" height="128"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
+                    <subviews>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Qyh-cH-ptr">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="240"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="240" id="q14-if-pPF"/>
+                            </constraints>
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KyO-ar-7x3">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sq4-Vb-JwT">
+                            <rect key="frame" x="0.0" y="240" width="414" height="132"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6pw-Gx-pZp">
+                                    <rect key="frame" x="16" y="16" width="382" height="100"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_night" translatesAutoresizingMaskIntoConstraints="NO" id="W3H-JW-1Io">
+                                            <rect key="frame" x="16" y="20" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="60" id="Oyq-OL-81k"/>
+                                                <constraint firstAttribute="width" constant="60" id="VIs-TW-E1b"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HfX-6y-RqJ">
+                                            <rect key="frame" x="98" y="23.5" width="268" height="53.5"/>
+                                            <string key="text">Look. Pretty, isn’t it?
+Perfectly balanced. As all things should be.</string>
+                                            <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="16"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.25098039220000001" green="0.21176470589999999" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="W3H-JW-1Io" firstAttribute="top" secondItem="6pw-Gx-pZp" secondAttribute="top" constant="20" id="AvE-qz-nsG"/>
+                                        <constraint firstItem="HfX-6y-RqJ" firstAttribute="centerY" secondItem="W3H-JW-1Io" secondAttribute="centerY" id="Gkc-KF-yCY"/>
+                                        <constraint firstAttribute="bottom" secondItem="W3H-JW-1Io" secondAttribute="bottom" constant="20" id="Kb6-jG-y9h"/>
+                                        <constraint firstAttribute="trailing" secondItem="HfX-6y-RqJ" secondAttribute="trailing" constant="16" id="Md3-kI-Daq"/>
+                                        <constraint firstItem="HfX-6y-RqJ" firstAttribute="leading" secondItem="W3H-JW-1Io" secondAttribute="trailing" constant="22" id="dh6-V5-fAV"/>
+                                        <constraint firstItem="W3H-JW-1Io" firstAttribute="leading" secondItem="6pw-Gx-pZp" secondAttribute="leading" constant="16" id="niP-20-7uy"/>
+                                    </constraints>
+                                </view>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="6pw-Gx-pZp" secondAttribute="bottom" constant="16" id="6XK-77-VXy"/>
+                                <constraint firstAttribute="trailing" secondItem="6pw-Gx-pZp" secondAttribute="trailing" constant="16" id="UF5-Pi-rhv"/>
+                                <constraint firstItem="6pw-Gx-pZp" firstAttribute="top" secondItem="Sq4-Vb-JwT" secondAttribute="top" constant="16" id="tCV-vN-u41"/>
+                                <constraint firstItem="6pw-Gx-pZp" firstAttribute="leading" secondItem="Sq4-Vb-JwT" secondAttribute="leading" constant="16" id="uAG-hR-k6C"/>
+                            </constraints>
+                        </view>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="FRV-5q-6dN">
+                            <rect key="frame" x="0.0" y="240" width="414" height="578"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YM1-uN-6pD">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="0.23529411764705882" green="0.30196078431372547" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Zo6-HC-l4z" secondAttribute="bottom" id="Iil-fB-cwN"/>
-                <constraint firstItem="Zo6-HC-l4z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Khf-RK-kMb"/>
-                <constraint firstItem="Zo6-HC-l4z" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="V2V-oV-7Wn"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Zo6-HC-l4z" secondAttribute="trailing" id="iIu-Me-l9F"/>
+                <constraint firstItem="NEd-ez-3ZF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="EQ5-AX-poA"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="NEd-ez-3ZF" secondAttribute="trailing" id="JGF-Ue-NMK"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="NEd-ez-3ZF" secondAttribute="bottom" id="e9g-Ee-Vmv"/>
+                <constraint firstItem="NEd-ez-3ZF" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="p6l-gH-4fa"/>
             </constraints>
-            <point key="canvasLocation" x="-154" y="132"/>
+            <point key="canvasLocation" x="-155.07246376811597" y="131.91964285714286"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="ic_night" width="60" height="60"/>
     </resources>
 </document>
