--- a/MeditationDemo/Context/Main/Views/MeditationsCollectionViewCell.xib
+++ b/MeditationDemo/Context/Main/Views/MeditationsCollectionViewCell.xib
@@ -11,10 +11,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="T9z-A1-OOH" customClass="MeditationsCollectionViewCell" customModule="MeditationDemo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="120" height="197"/>
+            <rect key="frame" x="0.0" y="0.0" width="120" height="210"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="120" height="197"/>
+                <rect key="frame" x="0.0" y="0.0" width="120" height="210"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vcq-oQ-sXo">
@@ -23,14 +23,14 @@
                             <constraint firstAttribute="height" constant="160" id="CYn-fp-OMC"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKq-j5-fIx">
-                        <rect key="frame" x="0.0" y="159" width="112" height="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKq-j5-fIx">
+                        <rect key="frame" x="0.0" y="168" width="112" height="22"/>
                         <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKu-et-gzc">
-                        <rect key="frame" x="0.0" y="181" width="120" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FKu-et-gzc">
+                        <rect key="frame" x="0.0" y="194" width="120" height="16"/>
                         <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="14"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -50,13 +50,13 @@
                 <constraint firstItem="FKu-et-gzc" firstAttribute="leading" secondItem="T9z-A1-OOH" secondAttribute="leading" id="uqt-Qw-cCm"/>
                 <constraint firstAttribute="trailing" secondItem="Vcq-oQ-sXo" secondAttribute="trailing" id="wiM-bw-vOH"/>
             </constraints>
-            <size key="customSize" width="120" height="197"/>
+            <size key="customSize" width="120" height="210"/>
             <connections>
                 <outlet property="meditationImageView" destination="Vcq-oQ-sXo" id="4Se-Bx-PFR"/>
                 <outlet property="subtitleLabel" destination="FKu-et-gzc" id="11o-DG-dyK"/>
                 <outlet property="titleLabel" destination="uKq-j5-fIx" id="t8Y-tB-dTV"/>
             </connections>
-            <point key="canvasLocation" x="-104.34782608695653" y="175.78125"/>
+            <point key="canvasLocation" x="-104.34782608695653" y="180.13392857142856"/>
         </collectionViewCell>
     </objects>
 </document>
